<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/company_logo_size"
        android:layout_height="@dimen/company_logo_size"
        android:layout_gravity="center"
        android:padding="@dimen/small_padding"
        app:srcCompat="@drawable/android" />

    <EditText
        android:id="@+id/editTextLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/small_padding"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextLoginPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:hint="@string/pin"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@color/white"
        android:textColor="@color/colorPrimary"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"/>
</LinearLayout>
