<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@android:style/TextAppearance.Holo.DialogWindowTitle" />

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:hint="@string/task_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTextTaskDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:hint="@string/task_desc"
        android:layout_margin="@dimen/small_padding"
        android:layout_gravity="left"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="CANCEL" />

        <Button
            android:id="@+id/buttonSaveTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="SAVE" />
    </LinearLayout>

</LinearLayout>
